--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <input
               id="url"
               type="text"
-              placeholder="Enter text"
+              placeholder="Текст"
               class="w-full border-2 border-gray-200 rounded p-3 text-grey-dark mr-2 focus:outline-none mb-5"
               required
             />
