--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         display: none;
       }
     </style>
-    <title>Free Online QR Code Generator</title>
+    <title>Бесплатный QR Code генератор!</title>
   </head>
   <body>
     <header class="header-section">
